--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en" class="dark" style="scroll-behavior: smooth;">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;700&display=swap"
+        rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -20,13 +22,27 @@
             overflow-x: hidden;
             cursor: none;
         }
-        .font-orbitron { font-family: 'Orbitron', sans-serif; }
-        .font-mono { font-family: 'JetBrains Mono', monospace; }
-        
+
+        .font-orbitron {
+            font-family: 'Orbitron', sans-serif;
+        }
+
+        .font-mono {
+            font-family: 'JetBrains Mono', monospace;
+        }
+
         /* Custom Scrollbar */
-        ::-webkit-scrollbar { width: 4px; }
-        ::-webkit-scrollbar-track { background: #020617; }
-        ::-webkit-scrollbar-thumb { background: #F97316; }
+        ::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #020617;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #F97316;
+        }
 
         canvas {
             display: block;
@@ -64,13 +80,23 @@
             align-items: center;
             justify-content: center;
         }
-        #custom-cursor::before, #custom-cursor::after {
+
+        #custom-cursor::before,
+        #custom-cursor::after {
             content: '';
             position: absolute;
             background: #FBBF24;
         }
-        #custom-cursor::before { width: 10px; height: 1px; }
-        #custom-cursor::after { width: 1px; height: 10px; }
+
+        #custom-cursor::before {
+            width: 10px;
+            height: 1px;
+        }
+
+        #custom-cursor::after {
+            width: 1px;
+            height: 10px;
+        }
 
         .scanline {
             width: 100%;
@@ -83,8 +109,13 @@
         }
 
         @keyframes scanlineMove {
-            from { transform: translateY(-100%); }
-            to { transform: translateY(100vh); }
+            from {
+                transform: translateY(-100%);
+            }
+
+            to {
+                transform: translateY(100vh);
+            }
         }
 
         .hud-text {
@@ -92,22 +123,14 @@
         }
 
         /* Prevent clicking through overlays if needed, but allow interaction with main content */
-        .z-pointer-none { pointer-events: none; }
+        .z-pointer-none {
+            pointer-events: none;
+        }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "three": "https://esm.sh/three@^0.182.0",
-    "gsap": "https://esm.sh/gsap@^3.14.2",
-    "gsap/": "https://esm.sh/gsap@^3.14.2/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+
+    <link rel="stylesheet" href="/index.css">
 </head>
+
 <body class="bg-slate-950 text-white overflow-x-hidden selection:bg-orange-500 selection:text-white">
     <div id="custom-cursor"></div>
     <div class="noise-overlay"></div>
@@ -144,6 +167,7 @@
             }
         });
     </script>
-<script type="module" src="/index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
